# Autonomous-Adaptive-Inspection-Bot-AAIB-

./: .gitignore  README.md
src/: twist_mux.py
src/calibration_tools/: package.xml  setup.py
src/calibration_tools/calibration_tools/: calibration_client.py  odometry_calibration_node.py  odometry_calibration_node_v2.py  odometry_calibration_node_v3.py
src/calibration_tools/launch/: calibration_launch.py
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: robotControlNode.py  robot_calibration.py  robot_cmd_publisher.py  rotate.py
src/robot_description/: LICENSE  package.xml  req.txt  setup.py
src/robot_description/config/: diff_drive_controllers.yaml  diff_drive_controllers.yaml.backup  ekf.yaml  nav2_params.yaml  slam_tool.yaml  twist_mux.yaml  web_robot_controllers.yaml
src/robot_description/config/nav2/: nav2_params.yaml
src/robot_description/launch/: aaib.launch.py  nav2.launch.py  slam.launch.py  spawn_web_robot_in_gazebo.launch.py  web_robot.launch.py  web_robot_sim.launch.py
src/robot_description/map/: map1.pgm  map1.yaml  new_map.pgm  new_map.yaml
src/robot_description/meshes/: base_link.STL  base_link.dae  base_with_motor - Johnson Geared motor-3.STL  baslink.dae  lidar.STL  lidar.dae  motor.dae  top_cover.STL  top_cover.dae  wheel.STL  wheel.dae
src/robot_description/urdf/: new.urdf  web_robot.urdf  web_robot.urdf.xacro
src/robot_description/worlds/: new.world
src/web/: index.html
src/web_interface_server/: package.xml  setup.cfg  setup.py
worlds/: campus_navigation.world
